test/fail/asyncret2.as
func call3<B <: Shared>(f : shared () -> async B) : async B { f(); };
